# DauThauBot

./: .dockerignore  .env.example  .gitignore  .vercelignore  BUILD_STAMP  DEPLOY_RAILWAY.md  DEPLOY_VERCEL.md  Dockerfile  Plan.md  Procfile  README.md  app.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements-docker.txt  requirements.txt  run_railway.py  vercel.json
api/: __init__.py  cron.py  health.py  index.py
config/: keywords.example.yaml
scripts/: railway-deploy.ps1
src/tracker/: __init__.py  __main__.py  bot_commands.py  config.py  crawler.py  filter.py  formatter.py  interactive_search.py  keyword_suggest.py  models.py  parser.py  railway_main.py  scheduler.py  storage.py  telegram.py  tender_store.py
tests/: test_bulk_groups.py  test_chitiet.py  test_crawler_circuit_breaker.py  test_extras_display.py  test_filter.py  test_formatter.py  test_interactive.py  test_keywords_resolve.py  test_narrow_suggest.py  test_parser.py  test_scheduler_watchdog.py  test_storage.py  test_tender_store.py  test_vercel_entrypoint.py  test_vercel_flask_app.py
tests/fixtures/: search_sample.json
